<resources>
    <string name="app_name">Travel App</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_about">About</string>
    <string name="search_place">Search Destination</string>
    <string name="unfavorite">Removed From Favorite</string>
    <string name="favorited">Added to Favorite</string>
    <string name="empty_alert">No data is displayed</string>
    <string name="back">Back</string>
</resources>