...
        when (uiState) {
            is UiState.Loading -> {
                viewModel.getFavoritePlace()
            }
            is UiState.Success -> {
                FavoriteContent(
                    listPlace = uiState.data,
                    navigateToDetail = navigateToDetail
                )
            }
            is UiState.Error -> {}
        }
    }
...
                        Text(
                            text = stringResource(R.string.empty_alert),
                            modifier = Modifier
                                        .align(Alignment.Center)
                                        .padding(16.dp)
                                        .fillMaxWidth()
                                        .testTag("emptyData")
                        )
                    }
                }
            }
        }
    }
...
