...
                },
                navigationIcon = {
                    IconButton(
                        onClick = navigateBack,
                        modifier = Modifier
                            .size(40.dp)
                            .testTag("backBtn")
                    ) {
                        Icon(
                            imageVector = Icons.Default.ArrowBack,
                            contentDescription = stringResource(R.string.back),
                        )
                    }
...
                            onFavoriteButtonClicked(id)
                        },
                        modifier = Modifier
                            .padding(end = 16.dp, top = 16.dp)
                            .size(40.dp)
                            .background(Color.White)
                            .testTag("favoriteBtn")
                    ) {
                        Icon(
                            imageVector = if (isClicked) Icons.Default.Favorite else Icons.Default.FavoriteBorder,
                            contentDescription = if (isClicked) stringResource(R.string.unfavorite) else stringResource(
                                R.string.favorited
                            ),
...
